--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = vendor/bcrypt
 	url = https://github.com/rg3/bcrypt.git
 	ignore = dirty
+[submodule "vendor/picolisp-unit"]
+	path = vendor/picolisp-unit
+	url = https://github.com/aw/picolisp-unit.git
