--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: bash
-
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y build-essential zlibc make autoconf libtool picolisp
+sudo: false
+cache: apt
 
 before_script:
   - ./build.sh
