--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         arch: ['src64']
-        version: ['17.12', '18.6', '18.12', '19.6', 'latest']
+        version: ['17.12', '18.6', '18.12', '19.6', '19.12', '20.6', 'latest']
 
     steps:
       - uses: actions/checkout@v1
-      - uses: aw/picolisp-action@v1
+      - uses: aw/picolisp-action@v2
         with:
           version: ${{matrix.version}}
           architecture: ${{matrix.arch}}
